# CSA-2

./: Aphorism.cpp  Aphorism.h  CMakeLists.txt  Container.cpp  Container.h  Proverb.cpp  Proverb.h  Puzzle.cpp  Puzzle.h  WellOfWisdom.cpp  WellOfWisdom.h  main.cpp
output/: test1  test2  test3  test4  test5  test6
tests/: test2.txt  test5.txt
